# cdns

./: .gitignore  CMakeLists.txt  Makefile  README.md  blacklist.c  blacklist.h  cdns.c  cfg.c  cfg.h  config.json.example  dns.c  dns.h  log.c  log.h  main.c  util.c  util.h
.github/workflows/: freebsd_build.yml  linux_build.yml
cmake/: FindLibevent2.cmake
